--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,17 @@ env:
 - CONFIG=Release PLATFORM=linux   BIT=32
 - CONFIG=Release PLATFORM=windows BIT=64
 - CONFIG=Release PLATFORM=windows BIT=32
+- CONFIG=Release PLATFORM=web BIT=64
 
 - CONFIG=Debug PLATFORM=linux   BIT=64
 - CONFIG=Debug PLATFORM=linux   BIT=32
 - CONFIG=Debug PLATFORM=windows BIT=64
 - CONFIG=Debug PLATFORM=windows BIT=32
+- CONFIG=Debug PLATFORM=web BIT=64
 
 install:
 - sudo apt-get update
-- sudo ./scripts/fetch_dev_dependencies.sh
+- ./scripts/fetch_dev_dependencies.sh
 script:
 - ./scripts/compile.sh
 before_deploy:
