--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,22 @@ if (NOT MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -Wfatal-errors")
 endif()
 
-set(LIB_TARGET ON CACHE BOOL "Build library version without event support")
+# Help emscripten find cross compiled libraries
+if(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+    list(APPEND CMAKE_FIND_ROOT_PATH "${PROJECT_SOURCE_DIR}/emscripten_deps")
+    list(APPEND CMAKE_SYSTEM_INCLUDE_PATH "${PROJECT_SOURCE_DIR}/emscripten_deps/include")
+    list(APPEND CMAKE_SYSTEM_LIBRARY_PATH "${PROJECT_SOURCE_DIR}/emscripten_deps/lib")
+    
+    # Use all relevant emscripten ports
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_SDL=2 -s USE_SDL_IMAGE=2 -s SDL2_IMAGE_FORMATS='[''png'',''bmp'']' -s USE_SDL_MIXER=2 -s USE_SDL_TTF=2 -s -s USE_LIBPNG=1 -s USE_OGG=1 -s USE_VORBIS=1 -s USE_FREETYPE=1 -s USE_ZLIB=1 -DBUFFERSIZE=4096")
+    
+    # Make console logs in browser more useful
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g4 -s ASSERTIONS=2 -s SAFE_HEAP=1 -s STACK_OVERFLOW_CHECK=2 --source-map-base http://localhost:8080/")
+    
+    # Generate with complete default html
+    SET(CMAKE_EXECUTABLE_SUFFIX ".html")
+endif()
+
 add_subdirectory(salmon)
 
 # Search library in libs folder residing beneath the bin folder
@@ -92,11 +107,13 @@ endif()
 
 add_executable(${PROJECT_NAME} ${GAME_SOURCES})
 
+if(CMAKE_SYSTEM_NAME STREQUAL Emscripten)
+    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "--preload-file ${CMAKE_SOURCE_DIR}/data@/data/")
+endif()
+
 target_include_directories(${PROJECT_NAME} PUBLIC src)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC Salmon)
 
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
-# Works only with CMake version 3.13+
-#install(TARGETS Salmon DESTINATION libs)
